--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: diffEq
-Version: 1.0
+Version: 1.0-1
 Title: Functions from the book Solving Differential Equations in R
 Author: Karline Soetaert <karline.soetaert@nioz.nl>
 Maintainer: Karline Soetaert <karline.soetaert@nioz.nl>
-Depends: R (>= 2.01), deSolve, rootSolve, bvpSolve, ReacTran, diagram,
-        deTestSet, scatterplot3d
-Description: Functions and examples from the book Solving Differential
-        Equations in R by Karline Soetaert, Jeff R Cash and Francesca
-        Mazzia.  Springer, 2012.
+Depends: R (>= 2.01), deSolve, rootSolve, bvpSolve, ReacTran, deTestSet
+Imports: shape
+Suggests: scatterplot3d
+Description: Functions and examples from the book Solving Differential 
+   Equations in R by Karline Soetaert, Jeff R Cash and Francesca Mazzia.
+   Springer, 2012.
 License: GPL
 LazyData: yes
-Packaged: 2013-09-24 08:02:41 UTC; ripley
 Repository: CRAN
-Date/Publication: 2013-09-24 10:08:07
+Repository/R-Forge/Project: bvpsolve
+Repository/R-Forge/Revision: 223
+Repository/R-Forge/DateTimeStamp: 2014-12-26 10:33:59
+Date/Publication: 2014-12-29 13:40:11
+Packaged: 2014-12-26 10:46:32 UTC; rforge
 NeedsCompilation: no
